--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
-node_modules
-dist
+# 🔒 Environment variables
+.env
+*.env
+
+# 📦 Node modules
+node_modules/
+
+# 🧪 Logs
+npm-debug.log*
+yarn-debug.log*
+
+# 🛠️ Build output
+dist/
+build/
+
+# 🧠 IDE/editor folders
+.vscode/
+.idea/
+
+# 💻 OS-specific files
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+Thumbs.db
